--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-slick": "^0.29.0",
+    "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "typescript": "5.0.2"
   },
